# NexusLauncher

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json
.github/: .gitignore
.github/workflows/: tauri-on-pr.yml
nexus-launcher/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
nexus-launcher/src/: App.vue  bindings.ts  config.ts  main.ts  styles.css
nexus-launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
nexus-launcher/src-tauri/icons/: icon.icns
nexus-launcher/src-tauri/src/: main.rs
nexus-launcher/src-tauri/src/config/: config.rs  mod.rs
nexus-launcher/src-tauri/src/config/instance/: config.rs  mod.rs
nexus-launcher/src-tauri/src/config/structs/: config.rs  instances.rs  mod.rs
nexus-launcher/src-tauri/src/config/user/: config.rs  mod.rs
nexus-launcher/src-tauri/src/fs/: mod.rs
nexus-launcher/src-tauri/src/handler/: install_progress_handler.rs
nexus-launcher/src-tauri/src/handlers/: install_progress_handler.rs  mod.rs  version_handler.rs
nexus-launcher/src-tauri/src/macos/: window_ext.rs
nexus-launcher/src-tauri/src/processes/: auth.rs  instance.rs  mod.rs  user.rs
nexus-launcher/src-tauri/src/services/: install_service.rs  mod.rs
nexus-launcher/src/assets/fonts/REM/: REM.css
nexus-launcher/src/assets/themes/: browser_fix.css  default.css  preflight.css
nexus-launcher/src/components/: NotificationMenu.vue
nexus-launcher/src/components/common/: NButton.vue  NChip.vue  NContextMenu.vue  NOptionSelect.vue  NRange.vue  NSelect.vue  NTooltip.vue
nexus-launcher/src/components/instance_management/: InstanceCard.vue  InstanceViewer.vue
nexus-launcher/src/components/other/: NotificationMenu.vue
nexus-launcher/src/components/popups/: ModalAccount.vue  ModalInstall.vue  ModalOnboarding.vue  ModalSettings.vue
nexus-launcher/src/components/settings/: SettingsSidebarBtn.vue
nexus-launcher/src/components/sidebar/: ProfileButton.vue  SidebarButton.vue
nexus-launcher/src/components/skeleton/: SkeletonBasic.vue
nexus-launcher/src/components/titlebar/: WindowBtns.vue
nexus-launcher/src/composables/: useModal.ts
nexus-launcher/src/scripts/: fs.ts  utils.ts
nexus-launcher/src/scripts/rust/: auth.ts  config.ts  instances.ts  user.ts
nexus-launcher/src/store/: metadata.ts
piston-lib/: Cargo.toml
piston-lib/src/: lib.rs
piston-lib/src/data_structures/: mod.rs
piston-lib/src/data_structures/client/: game_profile.rs  mod.rs
piston-lib/src/data_structures/game/: logging.rs  mod.rs  modded.rs  mojang_version_manifest.rs  version.rs
piston-lib/src/data_structures/game/metadata/: fabric_meta.rs  forge_meta.rs  mod.rs  mojang_version_manifest.rs  piston_version_manifest.rs
piston-lib/src/processes/: fs.rs  mod.rs  network.rs
piston-lib/src/processes/api/: mod.rs
piston-lib/src/processes/api/mojang/: mod.rs
piston-lib/src/processes/api/mojang/structs/: mod.rs  user.rs
piston-lib/src/processes/api/mojang/structs/entitlements/: mc_store.rs  mod.rs
piston-lib/src/processes/api/mojang/structs/minecraft/: profile.rs
piston-lib/src/processes/auth/: mod.rs
piston-lib/src/processes/installation/: mod.rs  vanilla.rs
piston-lib/src/processes/launcher/: args.rs  mod.rs
piston-lib/src/processes/launcher/installation/: forge.rs  mod.rs  modded.rs  vanilla.rs  versioning.rs
rust-playground/: Cargo.toml  log.txt
rust-playground/src/: install_tests.rs  main.rs
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: DemoPopup.vue  InstanceView.vue  ModalConfirm.vue  ModalInstall.vue
