[package]
name = "piston-lib"
version = "0.1.0"
edition = "2021"
authors = ["Eatham532 <eatham532@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specta = "1.0.5"
tauri = { version = "1.4", features = [ "dialog-all", "macos-private-api", "window-maximize", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show", "window-hide", "window-minimize", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.30", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
tokio = { version = "1.32.0", features = ["full"] }
bytes = "1.5.0"
sha1 = { version = "0.6.1", features = ["std"]}
serde_json = "1.0.106"
zip = { version = "0.6.6", features = [] }
