[package]
name = "piston-lib"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["Eatham532 <eatham532@gmail.com>"]
license = "MIT"
repository = "https://github.com/Eatham532/NexusLauncher/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specta = "1.0.5"
tauri = { version = "1.5.2", features = [ "dialog-all", "macos-private-api", "window-maximize", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show", "window-hide", "window-minimize", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.30", features = ["serde"] }
reqwest = { version = "0.11.22", features = ["blocking", "serde_json", "rustls-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
bytes = "1.5.0"
sha1 = { version = "0.6.1", features = ["std"]}
serde_json = "1.0.106"
zip = { version = "0.6.6", features = [] }
minecraft-msa-auth = "0.3.0"
oauth2 = { version = "4.3.0", default-features = false, features = ["reqwest", "rustls-tls"] }
dunce = "1.0.4"
serde-xml-rs = "0.6.0"
rayon = "1.8.0"