[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston-lib = { version="0.1.0", path="../piston-lib" }

serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["blocking", "serde_json", "rustls-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
zip = { version = "0.6.6" }
serde = { version = "1.0.190", features = ["derive"] }
env_logger = "0.10.1"
chrono = "0.4"
log = { version = "0.4.20", features = [] }