[package]
name = "nexus-launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["Eatham532 <eatham532@gmail.com>"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
piston-lib = { version="0.1.0", path="../../piston-lib" }

tauri = { version = "1.4", features = [ "path-all", "dialog-all", "macos-private-api", "window-maximize", "window-start-dragging", "window-unminimize", "window-unmaximize", "window-show", "window-hide", "window-minimize", "window-close", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "1.0.5"
toml = "0.8.0"
tauri-specta = { version = "1.0.2", features = ["typescript"] }
tokio = { version = "1.32.0", features = ["full"] }
crossbeam-queue = "0.3.8"
rand = "0.8.5"
uuid = { version="1.4.1", features = ["v1", "std", "rng"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
